# Master-Thesis

./: .gitattributes  .gitignore  CURRENT_STATUS.md  DATA_GENERATION_SUMMARY.md  MASTER_CONTEXT.md  POST_TRAINING_STEPS.md  PROGRESS_LOG.md  README.md  WORKING_PRINCIPLES.md  analyze_results.py  compare_methods.py  pyproject.toml  test_lstm.py  test_mle.py  train_full.py
.cursor/rules/: basic_python.mdc
models/: lstm_estimator_full.pt
results/: detailed_predictions.json  test_metrics.json
src/: __init__.py
src/classical/: __init__.py  mle.py
src/data/synthetic/basic_sv/: __init__.py  generator.py
src/models/: __init__.py  sv_basic.py
src/neural_networks/: __init__.py  lstm_estimator.py
src/utils/: __init__.py
