
[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[project]
authors = [{ name = "Martin Kasperlik", email = "mkasperlik@rsj.com" }]
name = "test"
description = "Master's thesis: Neural Network-Based Estimation of Stochastic Volatility Model Parameters"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "torch>=1.10.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "statsmodels>=0.13.0",
]


[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.3.4"
]




[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[project.scripts]
test = "test.__main__:main"



[tool.basedpyright]
include = ["src/**/*.py", "**/*.py"]
typeCheckingMode = "strict"




[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
